# load-balancer

./: README.md
java-web-app/src/main/java/org/ds/: WebServer.java
java-web-app/src/main/resources/: index.html
load-balncer-with-rust/: .gitignore  Cargo.toml  config.yml
load-balncer-with-rust/src/: config.rs  main.rs
load-balncer-with-rust/src/lb/: manager.rs  mod.rs  server.rs  strategy.rs
load-balncer-with-rust/src/lb/core/: manager.rs  mod.rs  server.rs
load-balncer-with-rust/src/lb/net/: health.rs  mod.rs  proxy.rs
load-balncer-with-rust/src/lb/strategy/: least_connections.rs  mod.rs  round_robin.rs  trait_def.rs  weighted_round_robin.rs
