[package]
name = "load-balncer-with-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "load-balancer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server and proxying
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# TCP utilities
tokio-util = "0.7"

# Config parsing
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Atomic counter for Round Robin
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
